--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,62 +4,38 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>unitech.unitechConsulting.testCases.Career_page_TC_001</td>
+<td>unitech.unitechConsulting.testCases.Home_Page_TC_001</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_004_software_development_dropdown_click</td>
+<td>TC_006_header_ContactUS_button_click</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_006_click_header_ContactUs_button</td>
+<td>TC_004_header_AboutUS_button_click</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_003_click_header_AboutUs_button</td>
+<td>TC_005_header_Career_button_click</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_001_click_header_career_button</td>
+<td>TC_002_software_development_dropdown_click</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_009_click_BurgerMenu_AboutUs_button</td>
+<td>TC_007_ClickDiscoverMore1_button</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_015_Logo_Psp_Tech_Career_click</td>
+<td>TC_003_software_development_dropdown_click</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TC_002_click_header_Home_button</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_011_click_BurgerMenu_Career_button</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_010_click_BurgerMenu_ContactUs_button</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_014_software_development_dropdown_click</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_012_software_development_BargerMenu_Career_click</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_013_software_development_dropdown_click</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>TC_005_software_development_dropdown_click</td>
+<td>TC_001_click_header_home_button</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
